<resources>
    <string name="app_name">Login</string>
    <string name="loginApp">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="username">UserName</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
